--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+
+
 # Built application files
 *.apk
 *.ap_
@@ -15,7 +24,6 @@ gen/
 # Gradle files
 .gradle/
 build/
-/*/build/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -25,3 +33,9 @@ proguard/
 
 # Log Files
 *.log
+
+# idea files, lets ignore this
+.idea/
+
+# IML files
+*.iml
